# puissance4

./: README.md  algorithmeDuJeu.php  algorithme_du_jeu.html  footer.php  header.php  index.php  presentationDuGroupe.php  presentationDuJeu.php  presentationIa.php  presentation_du_jeu.html  presentation_groupe.html  presentation_ia.html  sitemap.xml
css/: style.css
puissance4_coder_en_cpp/: CMakeLists.txt  conversion_type.cpp  ia.cpp  jeu.cpp  main.cpp  p4ia_4.cpp  puissance4api.cpp  test.txt
puissance4_coder_en_cpp/font/: tp-php-outils.tgz
puissance4_coder_en_cpp/headers/: conversion_type.h  declaration.h  ia.h  jeu.h  p4ia_4.h  strategie.h
puissance4_coder_en_cpp/src/: interfaceGUI.cpp  jeu.cpp  strategie.cpp  verification.cpp
puissance4_coder_en_cpp/src/headers/: puissance4api.hh  verification.h
puissance4_coder_en_cpp/src/test/: monTest
